# pomodoro-timer-rust

./: .gitignore  BUILD_WINDOWS.md  CLAUDE.md  Cargo.toml  build-debug.rs  build-windows-cross.sh  build-windows.ps1  build.rs  test_overlay.sh
.cargo/: config.toml
src/: bevy_overlay.rs  check_transparency.rs  main.rs  main_debug.rs  overlay.rs  overlay_selector.rs  overlay_window.rs  timer.rs  transparent_overlay.rs  tray.rs  win32_overlay.rs  windows_overlay.rs  windows_transparency.rs
