[package]
name = "rust_pomodoro"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.24", default-features = false, features = ["glow", "default_fonts"] }
egui = "0.24"
image = { version = "0.24", default-features = false, features = ["png"] }
rand = "0.8"
chrono = "0.4"
raw-window-handle = "0.5"
# tray-icon = "0.11"
notify-rust = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# rodio = "0.17"

# Optional: Bevy for better transparent overlay support
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "png",
    "x11",
    "wayland",
], optional = true }

[features]
default = []
bevy-overlay = ["bevy"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging", 
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_Graphics_Dwm"
] }
# Also need winapi for eframe compatibility
winapi = { version = "0.3", features = ["winuser", "windef", "minwindef", "wingdi", "consoleapi"] }

# [target.'cfg(windows)'.build-dependencies]
# winres = "0.1"
